--- a/requirements38.txt
+++ b/requirements38.txt
@@ -7,6 +7,7 @@ certifi==2019.6.16
 chardet==3.0.4
 cloudpickle==1.6.0
 docutils==0.14
+fastapi==0.97.0
 gast==0.2.2
 gdown==4.3.0
 gensim==3.8.0
@@ -42,6 +43,7 @@ setuptools~=47.1.0
 termcolor==1.1.0
 tqdm==4.51.0
 urllib3==1.25.3
+uvicorn==0.27.0
 Werkzeug==0.15.4
 wrapt==1.11.2
 -e .
